--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -12,7 +12,7 @@ html.root
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
 
-    title= title || 'GGP'
+    title= title || config.APP_NAME
     
     //- Favicon
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-touch-icon-57x57.png')
