--- a/src/components/contact-form/contact-form.jade
+++ b/src/components/contact-form/contact-form.jade
@@ -24,7 +24,7 @@ mixin contact-form()
         input.c-contact-form__field(type='text', name='brand')
 
       .c-contact-form__row
-        p.c-contact-form__label Envie seu logotipo (se ouver):
+        p.c-contact-form__label Envie seu logotipo (se houver):
         .c-contact-form__file
           input.c-contact-form__field(type='file', name='logo_upload')
 
